--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </tr>
             <tr>
                <td>
-                  <a href="https://kzot10110.github.io/updates/" style="color:9f200f">[*] All Updates</a>
+                  <a href="https://kzot10110.github.io/update/" style="color:9f200f">[*] All Updates</a>
                </td>
          </table>
       </center>
