--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    </head>
    <body style="background-color:#000000">
       <center style="color:#9f200f">
-         <img src="kzot10110.github.io/images/logo.png" /><br>
+         <img src="kzot10110.github.io/wlppr.jpg" /><br>
          cl0udfl4re. <br>
          <table>
             <tr>
